--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "ngx-spinner": "^6.1.2",
     "node-sass": "^4.10.0",
     "rxjs": "^6.3.3",
-    "shikshalokam": "file:../sharedModule/dist/shikshalokam",
+    "shikshalokam": "file:../sl-portal-library/dist/shikshalokam/shikshalokam-0.0.1.tgz",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
