--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~7.0.0",
     "@angular/service-worker": "~7.0.0",
     "@auth0/angular-jwt": "^2.1.0",
+    "angular-google-charts": "^0.1.3",
     "angular-material-fileupload": "^1.0.3",
     "angular-progress-bar": "^1.0.9",
     "bit-bin": "^13.0.4",
