--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/scss/responsive.scss",
               "src/assets/scss/varibles.scss",
+              "src/theme.scss",
               "src/styles.scss"
             ],
             "scripts": [
