--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 /dist
 /tmp
 /out-tsc
+/package-lock.json
 /src/environments/environment.ts
 /src/environments/environment.prod.ts
-
 
 # dependencies
 /node_modules
